--- a/test..html
+++ b/test..html
@@ -4,8 +4,233 @@
 	<title></title>
 	<link rel="stylesheet" href="css/styles.css">
 	<script src="content_script.js"></script>
+    <style>
+        #scrollable{
+            height: 200px;
+            overflow: scroll;
+            width: 200px;
+            background: green;
+            display: inline-block;
+            vertical-align:top;
+        }
+        #no-overflow{
+            height: 200px;
+            overflow: hidden;
+            width: 200px;
+            background: yellow;
+            display: inline-block;
+            vertical-align:top;
+        }
+        #no-scrollable{
+            width: 200px;
+            background: blue;
+            display: inline-block;
+        }
+
+    </style>
 </head>
 <body>
 Use the mouse wheel, trackpad finger scroll, or touch gesture on screen to test the reloader.
+
+<span id="scrollable">
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+    <div>lorem ipsum</div>
+</span>
+
+<span id="no-overflow">
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+</span>
+
+<span id="no-scrollable">
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsu m<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+    lorem ipsum<br>
+</span>
 </body>
 </html>
